--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 </head>
 <body>
 <div id="content">
-<header>
-    <a id="logo_link" href="index.html">
-        <img class="logo" src="images/logo.png" alt="our logo">
-    </a>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="#">Page 2</a>
-        <a href="site-plan-rafting.html">Site Plan</a>
-        <a href="contact.html">Contact Us</a>
-    </nav>
-</header>
+    <header>
+        <a id="logo_link" href="index.html">
+            <img class="logo" src="images/logo.png" alt="our logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="rivers.html">Rivers</a>
+            <a href="faq.html">FAQ</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contact.html">Contact Us</a>
+        </nav>
+    </header>
 <div id="hero">
     <div id="hero-box">
         <img id="hero-img" src="images/hero.png" alt="Enjoy Rafting Today!">
